--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/router": "^19.0.0",
         "@primeng/themes": "^19.0.5",
         "chart.js": "4.4.2",
+        "jspdf": "^3.0.1",
         "jwt-decode": "^4.0.0",
         "ngx-qrcode-styling": "^1.3.3",
         "primeclt": "^0.1.5",
@@ -36,6 +37,7 @@
         "@angular/cli": "^19.0.6",
         "@angular/compiler-cli": "^19.0.0",
         "@types/jasmine": "~5.1.0",
+        "@types/jspdf": "^1.3.3",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.14.0",
         "eslint-config-prettier": "^9.1.0",
